--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <div class="bar3"></div>
                 </div>
                 <div >
-                    <a href="../index.html" class="nav__bar__logo">
+                    <a href="./index.html" class="nav__bar__logo">
                         <img src="./img/pokebola.png" alt="Logo" class="nav__bar__logo__img">
                     </a>
                 </div>
@@ -53,7 +53,7 @@
             </div>
         </section>
      </nav>
-     <section class="">
+    <section class="">
         <article class="home">
             <img src="./img/gameboy.png" alt="" class="home__gameboy">
         </article>
@@ -130,7 +130,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="">
+                        <a href="./menu/farm.html">
                             <span class="material-icons-outlined">
                                 agriculture
                             </span>
@@ -138,7 +138,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="">
+                        <a href="./menu/pool.html">
                             <span class="material-icons-outlined">
                                 pool
                             </span>
@@ -151,6 +151,22 @@
                                 catching_pokemon
                             </span>
                             <span>NFT</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="./menu/collection.html">
+                            <span class="material-icons-outlined">
+                                collections
+                            </span>
+                            <span>Collections</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="./menu/lands.html">
+                            <span class="material-icons-outlined">
+                                landscape
+                            </span>
+                            <span>Lands</span>
                         </a>
                     </li>
                     <li>
@@ -193,11 +209,11 @@
     <section class="mobile__block">
         <article class="mobile__index">
             <div><img src="img/pika-trader.jpg" alt=""></div>
-            <h1>The moon is made of pancakes.</h1>
-            <h2>Trade, earn, and win crypto on the most popular decentralized platform in the galaxy.</h2>
+            <h1>Welcome to PokéDEX</h1>
+            <h2> An Amaxzing yield farm on Binance Smart Chain.</h2>
             <article>
-                <button class="btn__1">Connect Wallet</button>
-                <button class="btn__2">Trade Now</button>
+                <button class="btn__1 hover">Connect Wallet</button>
+                <button class="btn__2 hover">Trade Now</button>
             </article>
 
         </article>
