--- a/menu/farm.html
+++ b/menu/farm.html
@@ -544,7 +544,7 @@
     </main>
 
     <div class="farm__help">
-        <a href="./info.html" class="hover"><img src="../img/globo-normal.png" alt="" class="farm__help__globo"></a>
+        <a href="./info.html#info-farm  " class="hover"><img src="../img/globo-normal.png" alt="" class="farm__help__globo"></a>
         <img src="../img/bulbasur.png" alt="">
     </div>
     <footer class=" bg-green">    
@@ -579,17 +579,22 @@
                 <img src="../img/PokeDEX.png" alt="" class="footer__img">
             </article>
             <article class="footer__social">
-                <div>
-                    <span class="material-icons-outlined wp">
+                <div>   
+                    <a href="https://wa.me/1132436872?text=¡Hola,+muy+buena+pagina!" class="black"> 
+                        <span class="material-icons-outlined wp">
                         whatsapp
-                    </span>
+                        </span>
+                    </a>
+                    <!--Link a cv digital-->
                     <span class="material-icons-outlined">
                         smartphone
                     </span>
-                    <span class="material-icons-outlined">
-                        email
-                    </span>
-                    <img src="../img/logo-git-hub.png" alt="" class="footer__social__img">
+                    <a href="mailto:oyhamburo.jeremias@gmail.com" class="black">
+                        <span class="material-icons-outlined">
+                            email
+                        </span>
+                    </a>
+                    <a href="https://github.com/Oyhamburo"><img src="../img/logo-git-hub.png" alt="" class="footer__social__img"></a>
                 </div>
             </article>
         </section>
