--- a/menu/info.html
+++ b/menu/info.html
@@ -166,20 +166,20 @@
         <section class="info ">
             <h1>Info</h1>
             <article>
-                <h2>Swapping/Trading</h2>
+                <h2 id="info-trade">Swapping/Trading</h2>
                 <p>PancakeSwap permite a los usuarios operar sin la necesidad de pasar por un exchange centralizado.
                 Todo lo que haces en PancakeSwap se enruta directamente a través de tu propia billetera, ¡no hay necesidad de confiar en otra persona tus criptomonedas!
                 </p>
             </article>
             <article>
-                <h2>Liquidity Pools</h2>
+                <h2 id="info-pool">Liquidity Pools</h2>
                 <p>You can only swap tokens on PancakeSwap if there is enough liquidity for those tokens. 
                     If nobody has added much liquidity for the token or tokens you want to swap, it will be difficult, expensive, or impossible to do so.
                     Providing liquidity will get you LP Tokens, which will earn you rewards in the form of trading fees for making sure there's always liquidity for the exchange to use.
                 </p>
             </article>
             <article>
-                <h2>Yield Farming</h2>
+                <h2 id="info-farm">Yield Farming</h2>
                 <p>Yield farming lets users that are providing liquidity earn CAKE rewards by locking
                  their LP tokens into a smart contract. The incentive is to balance out the risk of impermanent loss that comes along with locking in your liquidity.
                 </p>
@@ -201,7 +201,58 @@
             </article>
         </section>
     </main>
-
+    <footer class=" bg-pink">    
+        <section class="footer">
+            <article>
+                <div>
+                    <ul>
+                        <li><h2>Menu</h2></li>
+                        <li><a href="./exchange.html">Exchange</a></li>
+                        <li><a href="./liquidity.html">Liquidity</a></li>
+                        <li><a href="./pool.html">Pools</a></li>
+                        <li><a href="./farm.html">Farms</a></li>
+                        <li><a href="./nft.html">NFT</a></li>
+                    </ul>
+                </div>
+                <div>
+                    <ul class="footer__li">
+                        <li><h2>Strategic Partners</h2></li>
+                        <li><img src="../img/CoderHouse.png" alt="" class="footer__img__2"></li>
+                        <li><img src="../img/CoderHouse.png" alt="" class="footer__img__2"></li>
+                    </ul>
+                </div>
+                <div>
+                    <ul>
+                        <li><h2>Developers</h2></li>
+                        <li><a href="">Github</a></li>
+                        <li><a href="">Documentación</a></li>
+                        <li><a href="">Bug Bounty</a></li>
+                        <li><a href="">Audits</a></li>
+                    </ul>
+                </div>
+                <img src="../img/PokeDEX.png" alt="" class="footer__img">
+            </article>
+            <article class="footer__social">
+                <div>   
+                    <a href="https://wa.me/1132436872?text=¡Hola,+muy+buena+pagina!" class="black"> 
+                        <span class="material-icons-outlined wp">
+                        whatsapp
+                        </span>
+                    </a>
+                    <!--Link a cv digital-->
+                    <span class="material-icons-outlined">
+                        smartphone
+                    </span>
+                    <a href="mailto:oyhamburo.jeremias@gmail.com" class="black">
+                        <span class="material-icons-outlined">
+                            email
+                        </span>
+                    </a>
+                    <a href="https://github.com/Oyhamburo"><img src="../img/logo-git-hub.png" alt="" class="footer__social__img"></a>
+                </div>
+            </article>
+        </section>
+    </footer> 
 
 </body>
 </html>
