--- a/menu/lands.html
+++ b/menu/lands.html
@@ -71,7 +71,7 @@
                            <div class="language__dropdown__text bg-white">Portugues</div>
                            <div class="language__dropdown__text bg-white">Nederlands</div>
                        </div>
-                    </div>
+                    </div>  
                     <div>
                         <span class="material-icons-outlined nav__bar__settings pink">
                             settings
@@ -214,7 +214,7 @@
             </article>
             <article class="land__section__container hover">
                 <div class="land__section__container__img">
-                    <img src="../img/land-green.gif" alt="">
+                    <img src="../img/land-blue.gif" alt="">
                 </div>
                 <div class="land__section__container__bot">
                     <h3>Titulo</h3>
@@ -244,7 +244,7 @@
             </article>
             <article class="land__section__container hover">
                 <div class="land__section__container__img">
-                    <img src="../img/land-blue.gif" alt="">
+                    <img src="../img/land-green.gif" alt="">
                 </div>
                 <div class="land__section__container__bot">
                     <h3>Titulo</h3>
@@ -292,29 +292,25 @@
                 <img src="../img/PokeDEX.png" alt="" class="footer__img">
             </article>
             <article class="footer__social">
-                <div>
-                    <span class="material-icons-outlined wp">
+                <div>   
+                    <a href="https://wa.me/1132436872?text=¡Hola,+muy+buena+pagina!" class="black"> 
+                        <span class="material-icons-outlined wp">
                         whatsapp
-                    </span>
+                        </span>
+                    </a>
+                    <!--Link a cv digital-->
                     <span class="material-icons-outlined">
                         smartphone
                     </span>
-                    <span class="material-icons-outlined">
-                        email
-                    </span>
-                    <img src="../img/logo-git-hub.png" alt="" class="footer__social__img">
+                    <a href="mailto:oyhamburo.jeremias@gmail.com" class="black">
+                        <span class="material-icons-outlined">
+                            email
+                        </span>
+                    </a>
+                    <a href="https://github.com/Oyhamburo"><img src="../img/logo-git-hub.png" alt="" class="footer__social__img"></a>
                 </div>
             </article>
         </section>
-    </footer>
-   
-
-
-
-
-
-
-    
-    
+    </footer> 
 </body>
 </html>
