--- a/menu/liquidity.html
+++ b/menu/liquidity.html
@@ -197,7 +197,7 @@
      </section>
      <br>
      <div class="liquidity__pikachu__trader">
-         <a href="./info.html" class="liquidity__pikachu__trader__globo" >
+         <a href="./info.html#info-pool" class="liquidity__pikachu__trader__globo" >
              <img src="../img/globo.png" alt="" class="liquidity__pikachu__trader__globo__img" >
         </a>
         <img src="../img/pikachu-r-gante.jpg" alt="" class="liquidity__pikachu__trader__img">
@@ -235,17 +235,22 @@
                 <img src="../img/PokeDEX.png" alt="" class="footer__img">
             </article>
             <article class="footer__social">
-                <div>
-                    <span class="material-icons-outlined wp">
+                <div>   
+                    <a href="https://wa.me/1132436872?text=¡Hola,+muy+buena+pagina!" class="black"> 
+                        <span class="material-icons-outlined wp">
                         whatsapp
-                    </span>
+                        </span>
+                    </a>
+                    <!--Link a cv digital-->
                     <span class="material-icons-outlined">
                         smartphone
                     </span>
-                    <span class="material-icons-outlined">
-                        email
-                    </span>
-                    <img src="../img/logo-git-hub.png" alt="" class="footer__social__img">
+                    <a href="mailto:oyhamburo.jeremias@gmail.com" class="black">
+                        <span class="material-icons-outlined">
+                            email
+                        </span>
+                    </a>
+                    <a href="https://github.com/Oyhamburo"><img src="../img/logo-git-hub.png" alt="" class="footer__social__img"></a>
                 </div>
             </article>
         </section>
