--- a/menu/pool.html
+++ b/menu/pool.html
@@ -119,88 +119,6 @@
                 </div>
                 </article>
         </section>
-        <section class="sidebar" id="mySidebar">
-            <div class="sidebar__container">
-                <div class="sidebar__container__titulo flex">
-                    <a href="../index.html" class="nav__bar__logo">
-                        <img src="../img/pokebola.png" alt="Logo" class="nav__bar__logo__img">
-                    </a>
-                    <h1>PokeDEX</h1>
-                </div>
-                <div class="sidebar__container__list">
-                    <ul>
-                        <li >
-                            <a href="./index.html">
-                                <span class="material-icons-outlined">
-                                    home
-                            </span>
-                            <span>Home</span>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="./exchange.html">
-                                <span class="material-icons-outlined">
-                                    currency_exchange
-                                </span>
-                                <span>Exchange</span>
-                            </a>
-                        </li>
-                        <li style="border-left: 4px yellow solid;">
-                            <a href="./liquidity.html">
-                                <span class="material-icons-outlined">
-                                    paid
-                                </span>
-                                <span>Liquidity</span>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="./farm.html">
-                                <span class="material-icons-outlined">
-                                    agriculture
-                                </span>
-                                <span>Farm</span>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="./pool.html">
-                                <span class="material-icons-outlined">
-                                    pool
-                                </span>
-                                <span>Pools</span>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="./nft.html">
-                                <span class="material-icons-outlined">
-                                    catching_pokemon
-                                </span>
-                                <span>NFT</span>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="./info.html">
-                                <span class="material-icons-outlined">
-                                    info
-                                </span>
-                                <span>Info</span>
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="sidebar__container__social">
-                    <span class="material-icons-outlined">
-                        whatsapp
-                    </span>
-                    <span class="material-icons-outlined">
-                        smartphone
-                    </span>
-                    <span class="material-icons-outlined">
-                        email
-                    </span>
-                    <img src="../img/logo-git-hub.png" alt="" style="height: 2.5rem;">
-                </div>
-            </div>
-        </section>
      </header>
      <article class="subnav bg-white" style="margin-top: 0;">
         <h2 class="subnav__h2" ><a href="./farm.html" class="subnav__link   subnav__link__on ">Farms</a></h2>
@@ -572,7 +490,7 @@
         </section>
     </main>
     <div class="farm__help">
-        <a href="./info.html" class="hover"><img src="../img/globo-normal.png" alt="" class="farm__help__globo"></a>
+        <a href="./info.html#info-pool" class="hover"><img src="../img/globo-normal.png" alt="" class="farm__help__globo"></a>
         <img src="../img/squirtle.png" alt="">
     </div>
     <footer class=" bg-blue">    
@@ -607,17 +525,22 @@
                 <img src="../img/PokeDEX.png" alt="" class="footer__img">
             </article>
             <article class="footer__social">
-                <div>
-                    <span class="material-icons-outlined wp">
+                <div>   
+                    <a href="https://wa.me/1132436872?text=¡Hola,+muy+buena+pagina!" class="black"> 
+                        <span class="material-icons-outlined wp">
                         whatsapp
-                    </span>
+                        </span>
+                    </a>
+                    <!--Link a cv digital-->
                     <span class="material-icons-outlined">
                         smartphone
                     </span>
-                    <span class="material-icons-outlined">
-                        email
-                    </span>
-                    <img src="../img/logo-git-hub.png" alt="" class="footer__social__img">
+                    <a href="mailto:oyhamburo.jeremias@gmail.com" class="black">
+                        <span class="material-icons-outlined">
+                            email
+                        </span>
+                    </a>
+                    <a href="https://github.com/Oyhamburo"><img src="../img/logo-git-hub.png" alt="" class="footer__social__img"></a>
                 </div>
             </article>
         </section>
