--- a/menu/collection.html
+++ b/menu/collection.html
@@ -180,7 +180,7 @@
         </section>
     </br> 
 
-    <section class="land__section collection__section">
+    <section class="land__section collection__section" >
         <article class="land__section__container  hover" style="width: 100%;">
             <div class="land__section__container__img">
                 <img src="../img/color-collection.webp" alt="" >
@@ -332,17 +332,22 @@
                 <img src="../img/PokeDEX.png" alt="" class="footer__img">
             </article>
             <article class="footer__social">
-                <div>
-                    <span class="material-icons-outlined wp">
+                <div>   
+                    <a href="https://wa.me/1132436872?text=¡Hola,+muy+buena+pagina!" class="black"> 
+                        <span class="material-icons-outlined wp">
                         whatsapp
-                    </span>
+                        </span>
+                    </a>
+                    <!--Link a cv digital-->
                     <span class="material-icons-outlined">
                         smartphone
                     </span>
-                    <span class="material-icons-outlined">
-                        email
-                    </span>
-                    <img src="../img/logo-git-hub.png" alt="" class="footer__social__img">
+                    <a href="mailto:oyhamburo.jeremias@gmail.com" class="black">
+                        <span class="material-icons-outlined">
+                            email
+                        </span>
+                    </a>
+                    <a href="https://github.com/Oyhamburo"><img src="../img/logo-git-hub.png" alt="" class="footer__social__img"></a>
                 </div>
             </article>
         </section>
